# bigvalue-search

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.opencode/: opencode.json
docs/: PRD.md  README.md  specification.md
src/bigvalue_search/: AGENTS.md  __init__.py  __main__.py  bigvalue_api.py  browser_auth.py  cli.py  config.py  data_export.py  exceptions.py  geocoding.py  radius_search.py
tests/: conftest.py  test_all.py  test_bigvalue_api.py  test_geocoding.py  test_radius_search.py
